          src/openvrml/OpenVRML/script.h: Allow Node::initialize to
          throw std::bad_alloc; initialize prototype objects of SF*
          classes in JavaScript; JavaScript SFNode::getProperty should
          return JS_TRUE if no eventOut is found so that the common
          handling code in SpiderMonkey can attempt to handle the
          property.

2002-10-12  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/browser.h,
          src/openvrml/OpenVRML/node.cpp,
          src/openvrml/OpenVRML/node.h,
          src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h: Refactored bound
          Background node stack to BackgroundClass; added render and
          initialize methods to NodeClass.

2002-10-10  Thomas Flynn  <tflynn@users.sourceforge.net>

        * java/vrml/field/ConstMFColor.java
          java/vrml/field/ConstMFInt32.java
          java/vrml/field/ConstMFString.java
          java/vrml/field/ConstMFVec2f.java
          java/vrml/field/ConstMFVec3f.java
          java/vrml/field/MFColor.java
          java/vrml/field/MFFloat.java
          java/vrml/field/MFInt32.java
          java/vrml/field/MFNode.java
          java/vrml/field/MFRotation.java
          java/vrml/field/MFString.java
          java/vrml/field/MFTime.java
          java/vrml/field/MFVec2f.java
          java/vrml/field/MFVec3f.java:: Various JSAI bug fixes and add
          additional comments.

        * models/TestJSAI.java: Add addtional tests for MFInt32 and
          MFString.

        * src/openvrml/OpenVRML/ScriptJDK.cpp: Start checking the
          results of calls to getFid and getFieldValue against 0 to
          better handle exceptions. Remove duplicated methods.
          Fix numerous bugs. Implement Script::toString. Purge usage
          of memcpy. Add addional comments.

        * src/openvrml/OpenVRML/Image.cpp,