@@ -313,80 +313,6 @@ void ViewerOpenGL::endGeometry()
   glMatrixMode(GL_MODELVIEW);
 }
 
-// Construct Billboard transformation matrix M  
-//
-// get rid of this asap: change over to use the transformation matrix
-// accumulated during render traversal. -cks
-//
-void ViewerOpenGL::getBillboardTransformMatrix(float M[4][4],
-                                               const float axisOfRotation[3])
-{
-  GLfloat modelview[16],invert[9];
-  glGetFloatv (GL_MODELVIEW_MATRIX, modelview);
-  float pos[] = {-modelview[12], - modelview[13], -modelview[14]};
-  float v[3],y[3];
-
-  if(InvertMatrix3x3of4x4(modelview,invert))
-  {
-// Viewer position in local coordinate system
-   v[0] = pos[0] * invert[0] + pos[1] * invert[3] + pos[2] * invert[6];
-   v[1] = pos[0] * invert[1] + pos[1] * invert[4] + pos[2] * invert[7];
-   v[2] = pos[0] * invert[2] + pos[1] * invert[5] + pos[2] * invert[8];
-   Vnorm( v );
-// Viewer-alignment
-  if ( fpzero(axisOfRotation[0]) &&
-       fpzero(axisOfRotation[1]) &&
-       fpzero(axisOfRotation[2]) )
-    {
-// Viewer's up vector
-	  y[0] = invert[3];
-	  y[1] = invert[4];
-	  y[2] = invert[5];
-      Vnorm( y );
-// get x-vector from the cross product of Viewer's
-// up vector and billboard-to-viewer vector. 
-     float x[3];
-     Vcross( x, y, v );
-	 Vnorm( x );
-     M[0][0] = x[0]; M[0][1] = x[1]; M[0][2] = x[2]; M[0][3] = 0.0;
-     M[1][0] = y[0]; M[1][1] = y[1]; M[1][2] = y[2]; M[1][3] = 0.0;
-     M[2][0] = v[0]; M[2][1] = v[1]; M[2][2] = v[2]; M[2][3] = 0.0,
-     M[3][0] = M[3][1] = M[3][2] = 0.0; M[3][3] = 1.0;
-    }
-
-  // use axis of rotation
-  else
-    {
-// axis of rotation will be the y-axis vector
-     y[0] = axisOfRotation[0];
-     y[1] = axisOfRotation[1];
-     y[2] = axisOfRotation[2];
-     Vnorm( y );
-
-// Plane defined by the axisOfRotation and billboard-to-viewer vector
-     float x[3];
-     Vcross( x, y, v );
-     Vnorm( x );
-// Get Z axis vector from cross product of X and Y
-     float z[3];
-     Vcross(z, x, y);
-// Transform Z axis vector of current coordinate system to new coordinate system.
-     float nz[3];
-     nz[0] = x[2]; nz[1] = y[2]; nz[2] = z[2];
-// calculate the angle by which the Z axis vector of current coordinate system
-// has to be rotated around the Y axis to new coordinate system.
-     float angle = acos(nz[2]) * 180 / pi;
-     if(nz[0] > 0) angle = -angle;
-     glPushMatrix();
-     glLoadIdentity();
-     glRotatef(angle,y[0],y[1],y[2]);
-     glGetFloatv (GL_MODELVIEW_MATRIX,(float *) M);
-     glPopMatrix();	 
-  }
-  }
-}
-
-
 Viewer::RenderMode ViewerOpenGL::getRenderMode() 
 {
   return d_selectMode ? RENDER_MODE_PICK : RENDER_MODE_DRAW; 
@@ -2759,112 +2685,6 @@ void ViewerOpenGL::setTextureTransform(const float center[2],
   if (translation) glTranslatef(translation[0], translation[1], 0.0);
 
   glMatrixMode(GL_MODELVIEW);
-}
-
-// Transforms
-// P' = T x C x R x SR x S x -SR x -C x P
-
-void ViewerOpenGL::setTransform(const float center[3],
-				const float rotation[4],
-				const float scale[3],
-				const float scaleOrientation[4],
-				const float translation[3]) 
-{
-  glTranslatef(translation[0], translation[1], translation[2]);
-  glTranslatef(center[0], center[1], center[2]);
-
-  if (! fpzero(rotation[3]) )
-    glRotatef(rotation[3] * 180.0 / pi,
-	      rotation[0],
-	      rotation[1],
-	      rotation[2]);
-
-  if (! fpequal(scale[0], 1.0) ||
-      ! fpequal(scale[1], 1.0) ||
-      ! fpequal(scale[2], 1.0) )
-    {
-      if (! fpzero(scaleOrientation[3]) )
-	glRotatef(scaleOrientation[3] * 180.0 / pi,
-		  scaleOrientation[0],
-		  scaleOrientation[1],
-		  scaleOrientation[2]);
-
-      glScalef(scale[0], scale[1], scale[2]);
-
-      if (! fpzero(scaleOrientation[3]) )
-	glRotatef(-scaleOrientation[3] * 180.0 / pi,
-		  scaleOrientation[0],
-		  scaleOrientation[1],
-		  scaleOrientation[2]);
-    }
-
-  glTranslatef(-center[0], -center[1], -center[2]);
-}
-
-// I used to just do a glPushMatrix()/glPopMatrix() in beginObject()/endObject().
-// This is a hack to work around the glPushMatrix() limit (32 deep on Mesa).
-// It has some ugly disadvantages: it is slower and the resulting transform
-// after a setTransform/unsetTransform may not be identical to the original.
-// It might be better to just build our own matrix stack...
-
-void ViewerOpenGL::unsetTransform(const float center[3],
-				  const float rotation[4],
-				  const float scale[3],
-				  const float scaleOrientation[4],
-				  const float translation[3])
-{
-  glTranslatef(center[0], center[1], center[2]);
-
-  if (! fpequal(scale[0], 1.0) ||
-      ! fpequal(scale[1], 1.0) ||
-      ! fpequal(scale[2], 1.0) )
-    {
-      if (! fpzero(scaleOrientation[3]) )
-	glRotatef(scaleOrientation[3] * 180.0 / pi,
-		  scaleOrientation[0],
-		  scaleOrientation[1],
-		  scaleOrientation[2]);
-
-      glScalef(1.0/scale[0], 1.0/scale[1], 1.0/scale[2]);
-
-      if (! fpzero(scaleOrientation[3]) )
-	glRotatef(-scaleOrientation[3] * 180.0 / pi,
-		  scaleOrientation[0],
-		  scaleOrientation[1],
-		  scaleOrientation[2]);
-    }
-
-  if (! fpzero(rotation[3]) )
-    glRotatef(- rotation[3] * 180.0 / pi,
-	      rotation[0],
-	      rotation[1],
-	      rotation[2]);
-
-  glTranslatef(-center[0], -center[1], -center[2]);
-  glTranslatef(-translation[0], -translation[1], -translation[2]);
-}
-
-// The matrix gets popped at endObject() - Not anymore. I added
-// an explicit unsetBillboardTransform to work around the matrix
-// depth limit of 32 in mesa. Now the limit only applies to 
-// nested billboards.
-
-void ViewerOpenGL::setBillboardTransform(const float axisOfRotation[3]) 
-{
-// Following code is modified by S. K. Bose March 02/2000 to fix the Billboardtransform
-// according to the specification.
-
-  float M[4][4];
-  getBillboardTransformMatrix(M, axisOfRotation);
-
-  glPushMatrix();
-  glMultMatrixf(&M[0][0]);
-
-}
-
-void ViewerOpenGL::unsetBillboardTransform(const float axisOfRotation[3])
-{
-  glPopMatrix();
 }
 
 namespace {
